--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install requests beautifulsoup4 python-dateutil urllib3
+        pip install playwright
+        playwright install chromium
+        playwright install-deps
     
     - name: Run scraper
       run: |
