--- a/.github/workflows/scrape-720pstream.yml
+++ b/.github/workflows/scrape-720pstream.yml
@@ -2,7 +2,7 @@ name: Scrape 720pStream Data
 
 on:
   schedule:
-    # Run every 6 hours
+    # Run every 6 hours - FIXED: was '0 */6 * *'* now is '0 */6 * * *'
     - cron: '0 */6 * * *'
   workflow_dispatch: # Allow manual trigger
 
@@ -18,7 +18,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
           
       - name: Install dependencies
         run: |
