--- a/.github/workflows/scrape-720pstream.yml
+++ b/.github/workflows/scrape-720pstream.yml
@@ -22,12 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 lxml selenium undetected-chromedriver
-          # Install Chrome
-          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
+          pip install requests beautifulsoup4 lxml
           # Check if requirements.txt exists and install
           if [ -f "requirements.txt" ]; then
             pip install -r requirements.txt
