--- a/.github/workflows/streambtw_extractor.yml
+++ b/.github/workflows/streambtw_extractor.yml
@@ -8,18 +8,10 @@ on:
   # Allow manual trigger
   workflow_dispatch:
     inputs:
-      extract_iframes:
-        description: 'Extract iframe details (fast)'
-        required: false
-        default: 'false'
-        type: choice
-        options:
-          - 'true'
-          - 'false'
       extract_playable:
         description: 'Extract playable M3U8 links (slow, comprehensive)'
         required: false
-        default: 'false'
+        default: 'true'
         type: choice
         options:
           - 'true'
@@ -27,7 +19,15 @@ on:
       create_html:
         description: 'Create HTML view'
         required: false
-        default: 'true'
+        default: 'false'
+        type: choice
+        options:
+          - 'true'
+          - 'false'
+      create_readme:
+        description: 'Generate README'
+        required: false
+        default: 'false'
         type: choice
         options:
           - 'true'
@@ -68,9 +68,8 @@ jobs:
         run: |
           python streambtw_extractor.py
         env:
-          EXTRACT_IFRAMES: ${{ github.event.inputs.extract_iframes || 'false' }}
-          EXTRACT_PLAYABLE: ${{ github.event.inputs.extract_playable || 'false' }}
-          CREATE_HTML: ${{ github.event.inputs.create_html || 'true' }}
+          EXTRACT_PLAYABLE: ${{ github.event.inputs.extract_playable || 'true' }}
+          CREATE_HTML: ${{ github.event.inputs.create_html || 'false' }}
       
       - name: Check if data file exists
         id: check_file
@@ -93,7 +92,7 @@ jobs:
           fi
       
       - name: Generate README
-        if: steps.check_file.outputs.file_exists == 'true'
+        if: steps.check_file.outputs.file_exists == 'true' && github.event.inputs.create_readme == 'true'
         run: |
           python - <<'EOF'
           import json
@@ -111,42 +110,31 @@ jobs:
           - **Last Updated**: {data['last_updated']}
           - **Total Events**: {data['total_items']}
           - **Sports Categories**: {data['sports_count']}
-          
-          ## 🏅 Available Sports
-          
           """
+          
+          if 'm3u8_extracted' in data and data['m3u8_extracted'] > 0:
+              readme += f"- **M3U8 Streams Extracted**: {data['m3u8_extracted']}\n"
+              readme += f"- **Accessible Streams**: {data['accessible_streams']}\n"
+          
+          readme += "\n## 🏅 Available Sports\n\n"
           
           for sport, items in sorted(data['by_sport'].items()):
               icon = items[0]['icon'] if items else "🎯"
-              readme += f"- {icon} **{sport}**: {len(items)} events\n"
+              m3u8_count = sum(1 for i in items if 'playable_link' in i and i['playable_link'].get('m3u8_url'))
+              if m3u8_count > 0:
+                  readme += f"- {icon} **{sport}**: {len(items)} events ({m3u8_count} with M3U8)\n"
+              else:
+                  readme += f"- {icon} **{sport}**: {len(items)} events\n"
           
-          readme += f"""
+          readme += """
           
           ## 📁 Files
           
           - `streambtw_data.json` - Complete data in JSON format
-          - `streambtw_data.html` - Interactive HTML view
           
           ## 🔄 Update Frequency
           
-          This data is automatically updated every 3 hours to catch live sports events.
-          
-          ## 📖 Usage
-          
-          ### View the data
-          ```bash
-          # View JSON
-          cat streambtw_data.json | jq '.'
-          
-          # Get events by sport
-          cat streambtw_data.json | jq '.by_sport.FOOTBALL'
-          
-          # Count total events
-          cat streambtw_data.json | jq '.total_items'
-          ```
-          
-          ### Open HTML view
-          Open `streambtw_data.html` in your browser for an interactive view.
+          This data is automatically updated every 3 hours.
           
           ---
           
@@ -167,8 +155,10 @@ jobs:
           
           # Add files
           git add streambtw_data.json || echo "No JSON to add"
-          git add streambtw_data.html || echo "No HTML to add"
-          git add STREAMBTW_README.md || echo "No README to add"
+          
+          # Conditionally add other files if they exist
+          [ -f "streambtw_data.html" ] && git add streambtw_data.html
+          [ -f "STREAMBTW_README.md" ] && git add STREAMBTW_README.md
           
           # Check if there are changes
           if git diff --staged --quiet; then
@@ -177,8 +167,13 @@ jobs:
             # Get stats for commit message
             ITEM_COUNT=$(jq '.total_items' streambtw_data.json)
             SPORTS_COUNT=$(jq '.sports_count' streambtw_data.json)
+            M3U8_COUNT=$(jq '.m3u8_extracted // 0' streambtw_data.json)
             
-            git commit -m "Update StreamBTW data - $(date +'%Y-%m-%d %H:%M:%S UTC') | Events: $ITEM_COUNT | Sports: $SPORTS_COUNT"
+            if [ "$M3U8_COUNT" -gt 0 ]; then
+              git commit -m "Update StreamBTW data - $(date +'%Y-%m-%d %H:%M:%S UTC') | Events: $ITEM_COUNT | Sports: $SPORTS_COUNT | M3U8: $M3U8_COUNT"
+            else
+              git commit -m "Update StreamBTW data - $(date +'%Y-%m-%d %H:%M:%S UTC') | Events: $ITEM_COUNT | Sports: $SPORTS_COUNT"
+            fi
             git push
           fi
       
